# fastapi-lib

./: pyproject.toml
.github/workflows/: commit-lint.yml  python-test.yml
src/fastapi_lib/patterns/: __init__.py  repository.py
tests/: test_crud_repository.py
