[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "fastapi-lib"
version = "25.6.1"
description = "A collection of utilities for FastAPI and SQLModel applications."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "inwerk"}
]
keywords = ["fastapi", "sqlmodel"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]
dependencies = [
    "pydantic>=2.11.5",
    "sqlmodel>=0.0.24",
]

[project.urls]
"Repository" = "https://github.com/zersec/fastapi-lib"
"Bug Tracker" = "https://github.com/zersec/fastapi-lib/issues"

[project.optional-dependencies]
build = ["build"]
dev = ["pytest", "pytest-cov", "ty", "ruff"]

[tool.pytest.ini_options]
addopts = "--cov=src  --no-cov-on-fail --cov-report term-missing"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["fastapi_lib"]
